--- a/saitae-web/src/main/webapp/pages/agAdm.xhtml
+++ b/saitae-web/src/main/webapp/pages/agAdm.xhtml
@@ -21,6 +21,8 @@
                                        onItemSelect="#{administradorController.onItemSelect2}" 
                                        persona="#{administradorController.adm}"
                                        t="100" onComplete="#{axiliarController.completeTextAdm}"/>
+                            <p:commandButton value="Limpiar campos" update="form1"
+                                             actionListener="#{administradorController.init()}"/>
                         </p:panel>
                     </p:tab>
                     <p:tab title="Contacto">
